# sparrow-tracky

./: .dockerignore  Dockerfile  Makefile  README.md  cookiecutter-config-file.yml  dvc.yaml  pyproject.toml  setup.cfg  test-boxes.npz
.devcontainer/: .env.example  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
data/: evaluate.py
data/metrics/: bicycle.json  car.json  chair.json
data/no-kalman-filter/: bicycle.json  car.json  chair.json  person.json
docker/: Dockerfile  README.md
sparrow_tracky/: __init__.py  moda.py  moda_test.py
sparrow_tracky/deepsort/: __init__.py  distance.py  distance_test.py  multiclass_tracker.py  multiclass_tracker_test.py  tracker.py  tracker_test.py  tracklet.py  tracklet_test.py
sparrow_tracky/metrics/: __init__.py  moda.py  moda_test.py  mota.py  mota_test.py
