[metadata]
name = sparrow-tracky
version = 0.5.1
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
install_requires = 
    scipy
    sparrow-datums

[options.extras_require]
dev =
    black
    isort
    jupyter
    pydocstyle
    pylint
    pytest
    pytest-cov

[pylint.FORMAT]
disable = all
enable = unused-import