[metadata]
name = sparrow-tracky
version = 0.1.0
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
install_requires = 
    fire

[options.extras_require]
dev =
    jupyter
    pytest
    pytest-cov

[options.entry_points]
console_scripts = 
    sparrow-tracky = sparrow_tracky.__main__:main

[pylint.FORMAT]
disable = all
enable = unused-import