[metadata]
name = sparrow-tracky
version = 0.6.0
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
install_requires = 
    scipy
    sparrow-datums>=0.9.3

[options.extras_require]
dev =
    black
    isort
    jupyter
    pydocstyle
    pylint
    pytest
    pytest-cov

[pylint.FORMAT]
disable = all
enable = unused-import